--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Flaskr</title>
+<title>Flask upload example</title>
 <link rel=stylesheet type=text/css href="{{ url_for('static', filename='style.css') }}">
 <div class=page>
 
@@ -7,7 +7,7 @@
 
 
   <h1>Flask</h1>
-    <h2>Upload new File</h2>
+    <h2>Upload video and images</h2>
     <form action="" method=post enctype=multipart/form-data>
       <p>Video: <input type=file name="files" multiple="">
       <p>Images: <input type=file name="files" multiple="">
